Implemented new HallOfFame activity: storing scores using sqlite3 local db w/ Room persistence library, using RecyclerView + custom adapter. Restructured packages to accomodate architectural conventions.

--- a/app/src/main/res/layout/activity_main_board.xml
+++ b/app/src/main/res/layout/activity_main_board.xml
@@ -7,7 +7,7 @@
     android:background="#302E2E"
     android:foregroundGravity="center_vertical"
     app:layout_anchorGravity="center_vertical"
-    tools:context=".GameMainActivity">
+    tools:context=".infra.ui.GameMainActivity">
 
     <FrameLayout
         android:id="@+id/frameLayout"
