Fixing level and score views layout.

--- a/app/src/main/res/layout/activity_main_board.xml
+++ b/app/src/main/res/layout/activity_main_board.xml
@@ -147,24 +147,23 @@
         android:text="@string/level_title"
         android:textColor="#26A69A"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <TextView
         android:id="@+id/levelValue"
-        android:layout_width="91dp"
-        android:layout_height="47dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:autofillHints=""
         android:background="#8BC34A"
         android:ems="10"
         android:gravity="center_horizontal|center_vertical"
         android:hint="@string/level_value"
-        android:minHeight="48dp"
-        android:padding="10dp"
+        android:padding="5dp"
         android:paddingHorizontal="10dp"
         android:paddingStart="20dp"
         android:paddingTop="10dp"
@@ -182,35 +181,34 @@
         android:id="@+id/scoreTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:text="@string/score_title"
         android:textColor="#26A69A"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/levelValue" />
 
     <TextView
         android:id="@+id/scoreValue"
-        android:layout_width="128dp"
-        android:layout_height="58dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:autofillHints=""
         android:background="#8BC34A"
-        android:ems="10"
         android:gravity="center_horizontal|center_vertical"
         android:hint="@string/score_value"
-        android:minHeight="48dp"
-        android:padding="10dp"
+        android:padding="5dp"
         android:textAlignment="gravity"
         android:textColorHint="#1B030B"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="@+id/guideline2"
         app:layout_constraintTop_toBottomOf="@+id/scoreTitle"
-        app:layout_constraintVertical_bias="0.25" />
+        app:layout_constraintVertical_bias="0.48000002" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline5"
